--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -77,6 +77,14 @@ rules:
 - apiGroups:
   - configuration.konghq.com
   resources:
+  - IngressClassParameters
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - configuration.konghq.com
+  resources:
   - kongclusterplugins
   verbs:
   - get
